[package]
name = "iptv-proxy"
version = "1.0.0"
edition = "2021"
authors = ["IPTV Proxy Team"]

[dependencies]
# 使用 Git 提交 d9e6d7a（pingora 0.8.0），已兼容 sfv 0.15
pingora = { git = "https://github.com/cloudflare/pingora", rev = "d9e6d7a", default-features = false, features = ["lb", "rustls"] }
pingora-core = { git = "https://github.com/cloudflare/pingora", rev = "d9e6d7a", default-features = false }
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
bytes = "1"
url = "2"
regex = "1"
once_cell = "1"
log = "0.4"
env_logger = "0.11"
ahash = "0.8"
memchr = "2"
num_cpus = "1"
http = "1"

# 不再需要 sfv 锁定，也不再需要 vendored openssl（使用 rustls）

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3
