[dependencies]
# pingora 主 crate，必须开启 proxy feature
pingora = { git = "https://github.com/cloudflare/pingora", rev = "d9e6d7a", default-features = false, features = ["lb", "proxy", "rustls"] }
# pingora-core 一般不需要单独声明，但如果需要，请保持 feature 对齐
pingora-core = { git = "https://github.com/cloudflare/pingora", rev = "d9e6d7a", default-features = false, features = ["rustls"] }
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
bytes = "1"
url = "2"
regex = "1"
once_cell = "1"
log = "0.4"
env_logger = "0.11"
ahash = "0.8"
memchr = "2"
num_cpus = "1"
http = "1"
urlencoding = "2"
