[package]
name = "iptv-proxy"
version = "1.0.0"
edition = "2021"
authors = ["IPTV Proxy Team"]

[dependencies]
# pingora 使用 Git 提交 d9e6d7a，已兼容 sfv，无需锁定
pingora = { git = "https://github.com/cloudflare/pingora", rev = "d9e6d7a", default-features = false, features = ["lb", "rustls"] }
pingora-core = { git = "https://github.com/cloudflare/pingora", rev = "d9e6d7a", default-features = false }
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
bytes = "1"
url = "2"
regex = "1"
once_cell = "1"
log = "0.4"
env_logger = "0.11"
ahash = "0.8"
memchr = "2"
num_cpus = "1"
http = "1"
urlencoding = "2"          # 新增，用于编解码代理 URL

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3 
